# spyndex

./: README.md  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  tox.ini
.github/scripts/: update_awesome_spectral_indices.py  update_ee_token.py
.github/workflows/: tests.yml  update_awesome_spectral_indices.yml
docs/: changelog.rst  conf.py  contributing.rst  docs-requirements.txt  index.rst  reference.rst  started.rst  tutorials.rst
docs/stubs/: spyndex.axioms.Band.rst  spyndex.axioms.Bands.rst  spyndex.axioms.Constant.rst  spyndex.axioms.Constants.rst  spyndex.axioms.PlatformBand.rst  spyndex.axioms.SpectralIndex.rst  spyndex.axioms.SpectralIndices.rst  spyndex.datasets.open.rst  spyndex.plot.heatmap.rst  spyndex.spyndex.computeIndex.rst  spyndex.spyndex.computeKernel.rst
docs/tutorials/: dask.ipynb  ee.ipynb  geopandas.ipynb  numpy.ipynb  pandas.ipynb  pc.ipynb  python_builtin.ipynb  xarray.ipynb  xcube.ipynb
spyndex/: __init__.py  axioms.py  datasets.py  plot.py  spyndex.py  utils.py
spyndex/data/: spectral.json
tests/: test_spyndex.py
